@@ -73,6 +73,9 @@
 #include "myserver.h"
 
 #include "preferencesdialog.h"
+#ifndef NO_USE_INI_FILES
+#include "prefgeneral.h"
+#endif
 #include "prefinterface.h"
 #include "prefinput.h"
 #include "prefadvanced.h"
@@ -2092,6 +2095,13 @@ void BaseGui::applyNewPreferences() {
 		f.fromString( pref->default_font );
 		qApp->setFont(f);
 	}
+
+#ifndef NO_USE_INI_FILES
+	PrefGeneral *_general = pref_dialog->mod_general();
+	if (_general->fileSettingsMethodChanged()) {
+		core->changeFileSettingsMethod(pref->file_settings_method);
+	}
+#endif
 
 	PrefInterface *_interface = pref_dialog->mod_interface();
 	if (_interface->recentsChanged()) {
